--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "designtrix",
+  "name": "client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -16,7 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-particles": "^2.12.2",
-    "react-router-dom": "^7.1.1",
+    "react-router-dom": "^7.1.2",
     "react-svg": "^16.2.0",
     "tsparticles-plugin-emitters": "^2.12.0",
     "tsparticles-slim": "^2.12.0"
