--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^11.3.31",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-particles": "^2.12.2",
     "react-router-dom": "^7.1.1",
     "react-svg": "^16.2.0",
