--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.5",
     "@react-three/drei": "^9.121.1",
     "@react-three/fiber": "^8.17.12",
     "framer-motion": "^11.3.31",
