--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-spring/web": "^9.7.5",
     "@react-three/drei": "^9.121.1",
     "@react-three/fiber": "^8.17.12",
+    "@studio-freight/lenis": "^1.0.42",
     "framer-motion": "^11.3.31",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
