--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-particles": "^2.12.2",
     "react-router-dom": "^7.1.1",
     "react-svg": "^16.2.0",
+    "react-ui-animate": "^4.2.0",
     "tsparticles-plugin-emitters": "^2.12.0",
     "tsparticles-slim": "^2.12.0",
     "use-sound": "^4.0.3"
